# mal_daemon

./: Makefile.am  README.md  configure.ac
src/: Log.c  Log.h  configuration.c  configuration.h  download.c  download.h  mal_daemon.c  mal_daemon.h  sql.c  sql.h
